Fix overflowing channel names (closes #383)

--- a/components/block_collection/stylesheets/block_collection.styl
+++ b/components/block_collection/stylesheets/block_collection.styl
@@ -242,12 +242,10 @@ privacy-color-hover('.grid__block--channel .grid__block__inner--privacy-', color
 
 /* CHANNEL */
 .grid__block--channel
-
-
   h2
     font-weight normal
     padding 15px 12px 0 12px
-    word-wrap break-word
+    word-break break-word
 
   .grid__block__content, .valign-inner, .valign-outer
     width 100%
